@@ -4,213 +4,231 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/appbar_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:background="@color/appbar_background">
 
-
-        <TextView
-            android:id="@+id/status_header"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="10dp"
-            android:fontFamily="@font/googlesans_bold"
-            android:text="@string/status"
-            android:textColor="@android:color/black"
-            android:textSize="20sp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"/>
-
-        <TextView
-            android:id="@+id/status"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/status_header"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="10dp"
-            android:fontFamily="@font/googlesans_regular"
-            android:text="@string/press_start"
-            android:textColor="@android:color/black"
-            android:textSize="16sp"
-            app:layout_constraintTop_toBottomOf="@+id/status_header"
-            app:layout_constraintStart_toStartOf="parent"/>
-
-
-        <TextView
-            android:id="@+id/dashboard_header"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/status"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="10dp"
-            android:fontFamily="@font/googlesans_bold"
-            android:text="@string/dashboard"
-            android:textColor="@android:color/black"
-            android:textSize="20sp"
-            app:layout_constraintTop_toBottomOf="@+id/status"
-            app:layout_constraintStart_toStartOf="parent"/>
-
-
-        <LinearLayout
-            android:id="@+id/dashboardLinear"
+        <com.google.android.material.appbar.CollapsingToolbarLayout
+            android:id="@+id/collapsing_toolbar"
             android:layout_width="match_parent"
-            android:layout_height="130dp"
-            android:layout_below="@id/dashboard_header"
-            android:orientation="horizontal"
-            app:layout_constraintTop_toBottomOf="@+id/dashboard_header"
-            app:layout_constraintStart_toStartOf="parent">
+            android:layout_height="match_parent"
+            app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
+            <androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
-            <LinearLayout
-                android:id="@+id/nighs_linear_layout"
-                android:layout_width="0dp"
-                android:layout_height="120dp"
-                android:layout_margin="10dp"
-                android:layout_weight="1"
-                android:background="@color/dash_nights"
-                android:orientation="vertical">
-
-
-                <!-- space  -->
-                <Space
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_weight="1" />
 
                 <TextView
-                    android:id="@+id/count_stat"
-                    android:layout_width="match_parent"
+                    android:id="@+id/status_header"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="10dp"
                     android:fontFamily="@font/googlesans_bold"
-                    android:textAlignment="center"
+                    android:text="@string/status"
                     android:textColor="@android:color/black"
-                    android:textSize="24sp"
-                    tools:text="87" />
+                    android:textSize="20sp"
+                    app:layout_collapseMode="parallax"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toStartOf="parent" />
 
                 <TextView
-                    android:layout_width="match_parent"
+                    android:id="@+id/status"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_margin="10dp"
-                    android:padding="10dp"
-                    android:text="@string/sleeps"
-                    android:textAlignment="center"
+                    android:layout_below="@id/status_header"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="10dp"
+                    android:fontFamily="@font/googlesans_regular"
+                    android:text="@string/press_start"
                     android:textColor="@android:color/black"
-                    android:textSize="16sp" />
+                    android:textSize="16sp"
+                    app:layout_constraintTop_toBottomOf="@+id/status_header"
+                    app:layout_constraintStart_toStartOf="parent" />
 
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/average_linear_layout"
-                android:layout_width="0dp"
-                android:layout_height="120dp"
-                android:layout_margin="10dp"
-                android:layout_weight="1"
-                android:background="@color/dash_average"
-                android:orientation="vertical">
-
-
-                <!-- space  -->
-                <Space
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_weight="1" />
 
                 <TextView
-                    android:id="@+id/duration_stat"
-                    android:layout_width="match_parent"
+                    android:id="@+id/dashboard_header"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_below="@id/status"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="10dp"
                     android:fontFamily="@font/googlesans_bold"
-                    android:textAlignment="center"
+                    android:text="@string/dashboard"
                     android:textColor="@android:color/black"
-                    android:textSize="24sp"
-                    tools:text="12:40" />
+                    android:textSize="20sp"
+                    app:layout_constraintTop_toBottomOf="@+id/status"
+                    app:layout_constraintStart_toStartOf="parent" />
+
+
+                <LinearLayout
+                    android:id="@+id/dashboardLinear"
+                    android:layout_width="match_parent"
+                    android:layout_height="130dp"
+                    android:layout_below="@id/dashboard_header"
+                    android:orientation="horizontal"
+                    app:layout_constraintTop_toBottomOf="@+id/dashboard_header"
+                    app:layout_constraintStart_toStartOf="parent">
+
+
+                    <LinearLayout
+                        android:id="@+id/nighs_linear_layout"
+                        android:layout_width="0dp"
+                        android:layout_height="120dp"
+                        android:layout_margin="10dp"
+                        android:layout_weight="1"
+                        android:background="@color/dash_nights"
+                        android:orientation="vertical">
+
+
+                        <!-- space  -->
+                        <Space
+                            android:layout_width="match_parent"
+                            android:layout_height="0dp"
+                            android:layout_weight="1" />
+
+                        <TextView
+                            android:id="@+id/count_stat"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:fontFamily="@font/googlesans_bold"
+                            android:textAlignment="center"
+                            android:textColor="@android:color/black"
+                            android:textSize="24sp"
+                            tools:text="87" />
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_margin="10dp"
+                            android:padding="10dp"
+                            android:text="@string/sleeps"
+                            android:textAlignment="center"
+                            android:textColor="@android:color/black"
+                            android:textSize="16sp" />
+
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:id="@+id/average_linear_layout"
+                        android:layout_width="0dp"
+                        android:layout_height="120dp"
+                        android:layout_margin="10dp"
+                        android:layout_weight="1"
+                        android:background="@color/dash_average"
+                        android:orientation="vertical">
+
+
+                        <!-- space  -->
+                        <Space
+                            android:layout_width="match_parent"
+                            android:layout_height="0dp"
+                            android:layout_weight="1" />
+
+                        <TextView
+                            android:id="@+id/duration_stat"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:fontFamily="@font/googlesans_bold"
+                            android:textAlignment="center"
+                            android:textColor="@android:color/black"
+                            android:textSize="24sp"
+                            tools:text="12:40" />
+
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_margin="10dp"
+                            android:padding="10dp"
+                            android:text="@string/average_string"
+                            android:textAlignment="center"
+                            android:textColor="@android:color/black"
+                            android:textSize="16sp" />
+
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:id="@+id/daily_linear_layout"
+                        android:layout_width="0dp"
+                        android:layout_height="120dp"
+                        android:layout_margin="10dp"
+                        android:layout_weight="1"
+                        android:background="@color/dash_daily"
+                        android:orientation="vertical">
+
+
+                        <!-- space  -->
+                        <Space
+                            android:layout_width="match_parent"
+                            android:layout_height="0dp"
+                            android:layout_weight="1" />
+
+                        <TextView
+                            android:id="@+id/duration_daily_stat"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:fontFamily="@font/googlesans_bold"
+                            android:textAlignment="center"
+                            android:textColor="@android:color/black"
+                            android:textSize="24sp"
+                            tools:text="8hrs" />
+
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_margin="10dp"
+                            android:padding="10dp"
+                            android:text="@string/daily_average_string"
+                            android:textAlignment="center"
+                            android:textColor="@android:color/black"
+                            android:textSize="16sp" />
+
+
+                    </LinearLayout>
+
+                </LinearLayout>
 
 
                 <TextView
-                    android:layout_width="match_parent"
+                    android:id="@+id/past_header"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_margin="10dp"
-                    android:padding="10dp"
-                    android:text="@string/average_string"
-                    android:textAlignment="center"
-                    android:textColor="@android:color/black"
-                    android:textSize="16sp" />
-
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/daily_linear_layout"
-                android:layout_width="0dp"
-                android:layout_height="120dp"
-                android:layout_margin="10dp"
-                android:layout_weight="1"
-                android:background="@color/dash_daily"
-                android:orientation="vertical">
-
-
-                <!-- space  -->
-                <Space
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_weight="1" />
-
-                <TextView
-                    android:id="@+id/duration_daily_stat"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_below="@id/dashboardLinear"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="10dp"
                     android:fontFamily="@font/googlesans_bold"
-                    android:textAlignment="center"
+                    android:text="@string/past"
                     android:textColor="@android:color/black"
-                    android:textSize="24sp"
-                    tools:text="8hrs" />
+                    android:textSize="20sp"
+                    app:layout_constraintTop_toBottomOf="@+id/dashboardLinear"
+                    app:layout_constraintStart_toStartOf="parent" />
 
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="10dp"
-                    android:padding="10dp"
-                    android:text="@string/daily_average_string"
-                    android:textAlignment="center"
-                    android:textColor="@android:color/black"
-                    android:textSize="16sp" />
+        </com.google.android.material.appbar.CollapsingToolbarLayout>
+    </com.google.android.material.appbar.AppBarLayout>
 
-
-            </LinearLayout>
-
-        </LinearLayout>
-
-
-        <TextView
-            android:id="@+id/past_header"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/dashboardLinear"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="10dp"
-            android:fontFamily="@font/googlesans_bold"
-            android:text="@string/past"
-            android:textColor="@android:color/black"
-            android:textSize="20sp"
-            app:layout_constraintTop_toBottomOf="@+id/dashboardLinear"
-            app:layout_constraintStart_toStartOf="parent"/>
-
+    <FrameLayout xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/sleeps"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_height="match_parent"
             android:layout_margin="10dp"
             android:scrollbars="vertical"
-            tools:listitem="@layout/layout_sleep_item"
-            app:layout_constraintTop_toBottomOf="@+id/past_header"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            tools:listitem="@layout/layout_sleep_item" />
+    </FrameLayout>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/start_stop"
