@@ -10,4 +10,6 @@
     <color name="dash_average">#56CCF2</color>
     <color name="dash_daily">#F2C94C</color>
 
+    <color name="appbar_background">#FAFAFA</color>
+
 </resources>
